syntax = 'proto3';

package loms;
option go_package = "gitlab.ozon.dev/homework/homework-1/loms/pkg/loms_v1";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "validate/validate.proto";

service LOMS {
  rpc CancelOrder(CancelOrderRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/cancel_order"
      body: "*"
    };
  }

  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {
    option (google.api.http) = {
      post: "/v1/create_order"
      body: "*"
    };
  }

  rpc ListOrder(ListOrderRequest) returns (ListOrderResponse) {
    option (google.api.http) = {
      post: "/v1/list_order"
      body: "*"
    };
  }

  rpc Stocks(StocksRequest) returns (StocksResponse) {
    option (google.api.http) = {
      post: "/v1/stocks"
      body: "*"
    };
  }

  rpc OrderPayed(OrderPayedRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/order_payed"
      body: "*"
    };
  }

}

message CancelOrderRequest {
  int64 order_id = 1 [(validate.rules).int64.gt = 0];
}

message CreateOrderRequest {
  Order order = 1;
};


message CreateOrderResponse {
  int64 order_id = 1;
};

message Order {
  int64 user_id = 1;
  string status = 2;
  repeated Item items = 3;
};

message Item {
  uint32 sku = 1;
  uint32 count = 2 [(validate.rules).uint32.lt = 65636];
};


message ListOrderRequest {
  int64 order_id = 1 [(validate.rules).int64.gt = 0];
};

message ListOrderResponse {
  Order order = 1;
};


message StocksRequest {
  uint32 sku = 1 [(validate.rules).uint32.gt = 0];
};

message StocksResponse {
  repeated Stock stocks = 1;
};

message Stock {
  int64 warehouse_id = 1;
  uint64 count = 2 [(validate.rules).uint64.lt = 65636];
};


message OrderPayedRequest {
  int64 order_id = 1 [(validate.rules).int64.gt = 0];
};